--- a/composer.json
+++ b/composer.json
@@ -9,14 +9,13 @@
         {
             "name": "Paul Andrieux",
             "email": "paul@appventus.com"
-        },
+        }
     ],
-    "minimum-stability": "dev",
     "require": {
         "php": ">=5.3.2",
         "symfony/framework-bundle": "~2.1",
         "symfony/form": "~2.1",
-        "fzaninotto/faker": ">=1.4.x-dev",
+        "fzaninotto/faker": ">=1.4.x-dev"
     },
     "autoload": {
         "psr-0": { "AppVentus\\AutoFormFillBundle": "" }
