--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         "php": ">=5.3.2",
         "symfony/framework-bundle": "~2.1",
         "symfony/form": "~2.1",
-        "fzaninotto/faker": ">=1.4.x-dev"
+        "fzaninotto/faker": ">=v1.4.0"
     },
     "autoload": {
         "psr-0": { "AppVentus\\AutoFormFillBundle": "" }
